<resources>
    <string name="app_name">CPA LINK</string>
    <string name="login">Login</string>
    <string name="logo">Logo</string>
    <string name="err_pass">You must input Password !</string>
    <string name="err_email">Invalid Email !</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="register">Create Account</string>
    <string name="signup">Sign-up</string>
    <string name="greetings">Welcome !</string>
    <string name="name"></string>
    <string name="notacc">No Account ?</string>
    <string name="logout">SIGN-OUT</string>
    <string name="lastname">Lastname</string>
    <string name="firstname">Firstname</string>
    <string name="bAddress">Business Address</string>
    <string name="tin">Tin Number</string>
    <string name="cpassword">Confirm Password</string>
    <string name="title_activity_menu2">MenuActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">CPA Link</string>
</resources>
